--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,15 @@
 <html>
 
   <head>
-    <title>Let's go cinema look | <%= @title %> </title>
-    <%= csrf_meta_tag %>    
+    <title><%= titleGen %> </title>
+    <%= csrf_meta_tag %>
+    <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
+    <%= stylesheet_link_tag 'blueprint/print', :media => 'print' %>    
   </head>
 
   <body>
     <%= yield %>
   </body>
-
+  
 
 </html>
