--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <h1>WELCOME!!!</h1>
 <p>
   it is a homepage. It is really embarrasing, but for now that is very sole content I'm able to put before you ))
+  
 </p>
+
+<%= link_to "Sign up", "#", :class => "signup_button round" %>
