--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,27 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-    "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 
   <head>
     <title><%= titleGen %> </title>
     <%= csrf_meta_tag %>
-    <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
-    <%= stylesheet_link_tag 'blueprint/print', :media => 'print' %>    
+
+    <%= render 'layouts/stylesheets' %>
+    
   </head>
 
   <body>
-    <%= yield %>
+    <div class = "container">
+      <%= render 'layouts/header' %>      
+      <section class = "round">
+        <%= yield %>
+      </section>
+      
+      <%= render 'layouts/footer' %>
+
+        
+    
+    </div>
+
   </body>
   
 
