Default page removed

--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,4 +1,5 @@
 <h1>WELCOME!!!</h1>
 <p>
   it is a help page. It is really embarrasing, but for now that is very sole content I'm able to put before you ))
+  <%= "this is about path: " + root_url %>
 </p>
