--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,8 +3,8 @@
 
   <nav class="round">
   <ul>
-    <li><%= link_to "About", '#' %></li>
-    <li><%= link_to "Contacts", '#'%></li>
+    <li><%= link_to "About", about_path %></li>
+    <li><%= link_to "Contacts", contact_path%></li>
     <li><a href="http://vkontakte.ru/id97069474">я вконтакте</a> </li>
   </ul>
   
