--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
 
-  <% logoPath = image_tag("logo.png", :alt => "Go2Cinema", :class => "round") %>
-  <%= link_to logoPath, root_path %>
+
+   <%= link_to logo, root_path %>
 
   <nav class="round">
   <ul>
