--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -110,6 +110,27 @@ a.signup_button {
 	border-radius: 10px;
 }
 
+/*table styles*/
+
+table.profile {
+	width: 100%;
+	margin-bottom: 0;
+}
+
+td.main {
+	width: 70%;
+	padding: 1em;
+}
+
+td.sidebar {
+	width: 30%;
+	padding: 1em;
+	vertical-align: top;
+	background: #ffc;
+}
+
+
+
 
 
 
