--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
     <div class = "container">
       <%= render 'layouts/header' %>      
       <section class = "round">
-        <%= yield %>
+         <% flash.each do |key, value| %>
+            <div class="flash <%= key %>"><%= value %></div>
+         <% end %>
+         <%= yield %>
       </section>
       
       <%= render 'layouts/footer' %>
